--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
+    "@babel/core": "^7.10.0",
     "@babel/plugin-transform-modules-umd": "^7.9.0",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.10.0",
+    "@babel/preset-env": "^7.10.0",
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
+    "body-parser": "^1.19.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
     "eslint": "^7.1.0",
     "eslint-loader": "^4.0.2",
     "express": "^4.17.1",
