--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.10.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.8.3",
     "@babel/plugin-transform-modules-umd": "^7.9.0",
     "@babel/plugin-transform-runtime": "^7.10.0",
     "@babel/preset-env": "^7.10.0",
