--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "history": "^4.10.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
