--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
       with:
        host: ${{ secrets.HOST }}
        username: ${{ secrets.USERNAME }}
-       password: ${{ secrets.PASSWORD }}
+       key: ${{ secrets.PRIVATE_KEY}}
+       # password: ${{ secrets.PASSWORD }}
        port: ${{ secrets.PORT }}
        script: sh /var/www/deployment/timer-front.sh
